--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>index</title>
+    <title>Crawl Curation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/css/uikit.min.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit-icons.min.js"></script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="//d3js.org/d3.v3.min.js"></script>
     <style type="text/css">
         a:link {
             text-decoration: none;
@@ -26,13 +26,38 @@
             text-decoration: none;
         }
     </style>
+    <style type="text/css">
+        .center-overlap {
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: block;
+            width: auto;
+            height: auto;
+            text-align:center;
+        }
+
+        .script-overlap {
+            position: relative;
+            width: auto;
+            height: auto;
+        }
+
+        .center {
+            left: 50%;
+            transform: translate(-50%, 0);
+        }
+    </style>
 </head>
 
 <body>
-    <div class="uk-section-secondary uk-preserve-color">
 
+<div id="navbar">
+    <div class="uk-section-secondary uk-preserve-color">
         <div uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container;
-        cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent uk-light; top: 200">
+        cls-active: uk-navbar-sticky uk-navbar-transparent uk-light;
+        cls-inactive: uk-navbar-transparent uk-light; top: 200">
 
             <nav class="uk-navbar-container">
                 <div class="uk-container uk-container-expand">
@@ -47,9 +72,9 @@
 
                                 <div id="offcanvas" uk-offcanvas>
 
-                                    <div class="uk-offcanvas-bar">
+                                    <div class="uk-offcanvas-bar uk-animation-toggle">
 
-                                        <div>
+                                        <div class="uk-animation-fade">
                                             <button class="uk-offcanvas-close uk-align-right" type="button" uk-close>
                                             </button>
                                             <div>
@@ -80,7 +105,7 @@
                             <li class="uk-active uk-visible@m uk-hidden-touch">
                                 <a href="#">Crawl Curation</a>
                             </li>
-                            <li class="uk-visible@m uk-hidden-touch">
+                            <li class="uk-button uk-button-text uk-visible@m uk-hidden-touch">
                                 <a href="#">Services</a>
                                 <div class="uk-navbar-dropdown">
                                     <ul class="uk-nav uk-navbar-dropdown-nav">
@@ -90,7 +115,7 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="uk-visible@m uk-hidden-touch">
+                            <li class="uk-button uk-button-text uk-visible@m uk-hidden-touch">
                                 <a href="https://csie.ntut.edu.tw/csie/index_i.htm">
                                 CSIE</a>
                             </li>
@@ -100,22 +125,17 @@
                 </div>
             </nav>
         </div>
-
-
     </div>
+</div>
 
-    <div class="uk-section-secondary uk-preserve-color">
-        <h1 class="uk-text-center uk-heading-primary uk-light"><span>Crawl Curation</span></h1>
-        <h3 class="uk-text-center uk-light">We've just begun</h3>
-        <a href="#about" uk-scroll>
-            <button class="uk-button uk-align-center uk-button-muted uk-dark">
-            START
-            </button>
-        </a>
-        <div class="uk-container uk-container-large uk-background-secondary">
-        <script>
+    <div class="uk-section uk-section-secondary">
+
+
+        <div>
+        <div class="script-overlap uk-container">
+            <script type="text/javascript" async>
             var width = 1280,
-                height = 500;
+                height = 700;
 
             var nodes = d3.range(100).map(function() { return {radius: Math.random() * 12 + 4}; }),
                 root = nodes[0],
@@ -125,7 +145,7 @@
             root.fixed = true;
 
             var force = d3.layout.force()
-                .gravity(0.06)
+                .gravity(0.015)
                 .charge(function(d, i) { return i ? 0 : -2000; })
                 .nodes(nodes)
                 .size([width, height]);
@@ -138,14 +158,14 @@
 
             svg.append("rect")
                 .attr("width", "100%")
-                .attr("height", "100%")
+                .attr("height", "110%")
                 .attr("fill", "#222222");
 
             svg.selectAll("circle")
                 .data(nodes.slice(5))
               .enter().append("circle")
                 .attr("r", function(d) { return d.radius; })
-                .style("fill", function(d, i) { return color(i % 10); });
+                .style("fill", function(d, i) { return color(i % 100); });
 
             force.on("tick", function(e) {
               var q = d3.geom.quadtree(nodes),
@@ -216,46 +236,33 @@
                 svg.attr("width", targetWidth);
                 svg.attr("height", Math.round(targetWidth / aspect));
             }
-
-            ////////////////////////////////////
-            //Responsive D3 Charts
-            ////////////////////////////////////
-            var container = d3.select(svg.node().parentNode),
-                width = parseInt(svg.style("width")),
-                height = parseInt(svg.style("height")),
-                aspect = width / height;
-
-            // add viewBox and preserveAspectRatio properties,
-            // and call resize so that svg resizes on inital page load
-            svg.attr("viewBox", "0 0 " + width + " " + height)
-                .attr("perserveAspectRatio", "xMinYMid")
-                .call(resize);
-
-            // to register multiple listeners for same event type,
-            // you need to add namespace, i.e., 'click.foo'
-            // necessary if you call invoke this function for multiple svgs
-            // api docs: https://github.com/mbostock/d3/wiki/Selections#on
-            d3.select(window).on("resize." + container.attr("id"), resize);
-
-            // get width of container and resize svg to fit it
-            function resize() {
-                var targetWidth = parseInt(container.style("width"));
-                svg.attr("width", targetWidth);
-                svg.attr("height", Math.round(targetWidth / aspect));
-            }
         </script>
+        </div>
+        </div>
+
+        <div class="center-overlap uk-container uk-background-transparent" uk-scrollspy="cls:uk-animation-fade">
+            <h1 class="uk-text-center uk-heading-primary uk-light"><span>Crawl Curation</span></h1>
+            <h3 class="uk-text-center uk-light">We've just begun</h3><br>
+            <a href="#about" uk-scroll>
+                <button class="uk-button uk-align-center uk-button-default">
+                START
+                </button>
+            </a>
         </div>
     </div>
 
     <div class="uk-section-secondary uk-preserve-color" id="about">
-        <div class="uk-section uk-light " uk-height-viewport="expand: true">
-            <div class="uk-container uk-text-center uk-flex-center uk-flex-wrap ">
-
-
-                <div class="uk-grid-divider uk-grid-match uk-child-width-1-3@m" uk-grid>
-                    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top"
-                         style="background-image: url('images.jpg');">
-                         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+        <div class="uk-section uk-dark" uk-height-viewport="expand: true">
+            <div class="uk-container uk-container-expand uk-background-secondary uk-text-center">
+                <div class="uk-grid-match uk-grid-medium uk-child-width-1-3@m uk-flex uk-flex-center" uk-grid
+                     uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
+                    <div class="uk-padding-small">
+                    <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
+                    uk-background-blend-multiply uk-background-secondary
+                    uk-light uk-flex uk-flex-top"
+                         style="background-image: url(https://mklnd.com/2s0pxgB);" uk-parallax="bgy: -70">
+                        <div class="uk-overlay uk-position-center
+                        uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
                             <h3 uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; viewport: 0.5;">資料爬取/儲存</h3>
                             <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">
                                 使用Python的requests，透過向Facebook Graph API發出請求，以取得指定粉絲專業之文章，
@@ -263,9 +270,13 @@
                             </p>
                         </div>
                     </div>
-                    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top"
-                         style="background-image: url('images.jpg');">
-                         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+                    </div>
+                    <div class="uk-padding-small">
+                    <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
+                    uk-background-blend-multiply uk-background-secondary uk-light"
+                         style="background-image: url(http://bit.ly/2IWo6dD);" uk-parallax="bgy: -70">
+                        <div class="uk-overlay uk-position-center
+                        uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
                             <h3 uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; viewport: 0.5;">資料分析</h3>
                             <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">
                                 段詞 (Word Segmentation)：在文章主題分析中，我們將文章視為「無序」的單詞「集合」。
@@ -274,14 +285,19 @@
                             </p>
                         </div>
                     </div>
-                    <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex uk-flex-top"
-                         style="background-image: url('images.jpg');">
-                         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+                    </div>
+                    <div class="uk-padding-small">
+                    <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
+                    uk-background-blend-multiply uk-background-secondary
+                    uk-light" style="background-image: url(http://bit.ly/2IV4CGl);" uk-parallax="bgy: -70">
+                        <div class="uk-overlay uk-position-center
+                        uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
                             <h3 uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; viewport: 0.5;">可視化</h3>
                             <p uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; viewport: 0.5;">
                                 D3.js：是一個動態圖形顯示資料圖形的JavaScript Library，負責數據可視化的部分。
                             </p>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
