可檢視資料庫所有文本

--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -90,6 +90,9 @@
                                                 <div>
                                                     <a href="#">情感分析</a>
                                                 </div>
+                                                <div>
+                                                    <a href="#">資料文本</a>
+                                                </div>>
                                             </div>
                                             <p></p>
                                             <div>
@@ -112,6 +115,7 @@
                                         <li><a href="#">Facebook Login</a></li>
                                         <li><a href="#">數據可視畫</a></li>
                                         <li><a href="#">情感分析</a></li>
+                                        <li><a href="/text/">資料文本</a></li
                                     </ul>
                                 </div>
                             </li>
