輸入token和pageID取得貼文

--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -36,7 +36,7 @@
                                                     <a href="#">情感分析</a>
                                                 </div>
                                                 <div>
-                                                    <a href="/text/">資料文本</a>
+                                                    <a href="/get/">資料文本</a>
                                                 </div>
                                             </div>
                                             <p></p>
@@ -72,7 +72,7 @@
                                             </span>
                                             情感分析
                                         </a></li>
-                                        <li><a href="/text/">
+                                        <li><a href="/get/">
                                             <span uk-icon="icon: database;" class="uk-dark uk-margin-small-right">
                                             </span>
                                             資料文本
