改從"facebook login"做輸入資料

--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -27,7 +27,7 @@
                                             </div>
                                             <div class="uk-child-width-1-1" uk-grid>
                                                 <div>
-                                                    <a href="#">Facebook Login</a>
+                                                    <a href="/get/">Facebook Login</a>
                                                 </div>
                                                 <div>
                                                     <a href="#">數據可視畫</a>
@@ -36,7 +36,7 @@
                                                     <a href="#">情感分析</a>
                                                 </div>
                                                 <div>
-                                                    <a href="/get/">資料文本</a>
+                                                    <a href="/text/">資料文本</a>
                                                 </div>
                                             </div>
                                             <p></p>
@@ -57,7 +57,7 @@
                                 <a href="#">Services</a>
                                 <div class="uk-navbar-dropdown">
                                     <ul class="uk-nav uk-text-left uk-navbar-dropdown-nav">
-                                        <li><a href="#">
+                                        <li><a href="/get/">
                                             <span uk-icon="icon: facebook;" class="uk-dark uk-margin-small-right">
                                             </span>
                                             Facebook Login
@@ -72,7 +72,7 @@
                                             </span>
                                             情感分析
                                         </a></li>
-                                        <li><a href="/get/">
+                                        <li><a href="/text/">
                                             <span uk-icon="icon: database;" class="uk-dark uk-margin-small-right">
                                             </span>
                                             資料文本
